# rust-axum-todo-api

./: .editorconfig  .env  Cargo.toml  README.md
backend/: Cargo.toml  compose.yml
backend/src/: main.rs
backend/src/controllers/: auth_controller.rs  todo_controller.rs  user_controller.rs
backend/src/middlewares/: auth_middlware.rs
backend/src/services/: jwt_service.rs  todo_service.rs  user_service.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
migrations/: 20230623135622_create_users_table.up.sql  20230623170654_create_todo_table.up.sql  20230918200220_add_colum_user_id_to_todos_table.down.sql  20230918200220_add_colum_user_id_to_todos_table.up.sql  20230922175339_add_colum_is_admin_to_users_table.down.sql  20230922175339_add_colum_is_admin_to_users_table.up.sql
requests/: todos.rest  users.rest
src/: main.rs
src/controllers/: auth_controller.rs  todo_controller.rs  user_controller.rs
src/middlewares/: admin_middlware.rs  mod.rs
src/models/: error.rs  mod.rs  todo.rs  user.rs
src/services/: jwt_service.rs  mod.rs  password_service.rs  todo_service.rs  user_service.rs
