[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argon2 = "0.5.0"
axum = { version = "0.6.20", features = ["macros", "headers"] }
common = { version = "0.1.0", path = "../common" }
dotenvy = "0.15.7"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
rand = "0.8.5"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
